force-app/main/default/objects/Product_Provider__c/Product_Provider__c.object-meta.xml
<CustomObject>
    <description>Objet permettant de lister les fournisseurs par produit et dépôt</description>
    <label>Fourniture de produit</label>
    <nameField>
        <displayFormat>FP/{YYYY}/{000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fournitures de produit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>