force-app/main/default/objects/Product_Provider__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <label>Date de fin de validité</label>
    <type>Date</type>
</CustomField>