force-app/main/default/objects/Product_Provider__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fournitures de produit</relationshipLabel>
    <relationshipName>Product_Providers</relationshipName>
    <type>Lookup</type>
</CustomField>