force-app/main/default/objects/Product_Provider__c/fields/provider__c.field-meta.xml
<CustomField>
    <fullName>provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fournisseur</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le compte sélectionné doit être un fournisseur.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fournisseur</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fournitures de produit</relationshipLabel>
    <relationshipName>Product_Providers</relationshipName>
    <type>Lookup</type>
</CustomField>