force-app/main/default/objects/Product_Provider__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <label>Date de début de validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>