force-app/main/default/objects/Product_Provider__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>provider__c</columns>
    <columns>product__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>serviceEntity__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>